# FinopsAI

./: .gitignore  PUBLISHING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: index.md
landing/: index.html
src/finops_ai/: __init__.py  __version__.py  cli.py  config.py
src/finops_ai/core/: __init__.py  auth_manager.py  base_manager.py  graph_analyzer.py  policy_engine.py
src/finops_ai/ml/: __init__.py  anomaly_detector.py  cost_forecaster.py  recommender.py
src/finops_ai/ml/embeddings/: __init__.py  turbo_quant.py
src/finops_ai/providers/: __init__.py
src/finops_ai/providers/aws/: __init__.py  ebs_manager.py  ec2_manager.py  network_manager.py  rds_manager.py
src/finops_ai/providers/azure/: __init__.py  app_service_manager.py  disk_manager.py  network_manager.py  resource_group_manager.py  snapshot_manager.py  storage_manager.py  vm_manager.py
src/finops_ai/providers/gcp/: __init__.py  compute_manager.py  network_manager.py  scope_resolver.py  storage_manager.py
src/finops_ai/reporters/: __init__.py  csv_reporter.py  html_reporter.py  json_reporter.py  slack_reporter.py
src/finops_ai/utils/: __init__.py  cost_calculator.py  logger.py
tests/: test_core.py  test_gcp_scope.py  test_graph.py  test_policy_engine.py  test_turbo_quant.py
